iRedMail-1.7.5:

+ Supports new distribution release:
    + Debian 13 (trixie)
    + OpenBSD 7.8.

* Dropped distribution release:
    - OpenBSD 7.7

* Updated packages:
    + Roundcube 1.6.13 (addresses 2 security issues)
    + netdata 2.8.4
    + iRedAPD 6.1, supports secure (ssl) sql connection.
    + mlmmjadmin 3.6.2, supports secure (ssl) sql connection.
    + iRedAdmin 2.7
    + uwsgi 2.0.31 (OpenBSD only)

iRedMail-1.7.4:

+ Supports new distribution release:
    + OpenBSD 7.7. OpenBSD 7.6 has been dropped.
    + CentOS Stream 10. Note: SOGo is not available because SOGo team doesn't
      build binary packages for RHEL-family 10.
    + AlmaLinux 10. Note: SOGo is not available because SOGo team doesn't
      build binary packages for RHEL-family 10.

* Updated packages:
    + Roundcube 1.6.11 (security fix)
    + iRedAPD 5.9.1
    + netdata 2.5.2
    + mlmmjadmin 3.4.0

iRedMail-1.7.3:

* Improvements:
    - [OpenLDAP] Allow mail user account to use 2 new attributes
      `recoveryEmail`, `birthday`.
    - [SQL backends] 6 new columns in `vmail.mailbox` talbe to store more user
      information: `first_name`, `last_name`, `mobile`, `telephone`,
      `birthday`, `recovery_email`.
    - [SQL backends] 2 new columns in `vmail.deleted_mailboxes`: `bytes`,
      `messages`.

* Updated packages:
    + iRedAPD 5.9.0
    + mlmmjadmin 3.3.1
    + netdata 2.3.2
    + roundcube 1.6.10

iRedMail-1.7.2:

+ Supports new distribution release:
    + OpenBSD 7.6

* Dropped distribution release:
    - OpenBSD 7.5

* Improvements:
    - OpenLDAP schema: mail alias account can use 2 more attributes:
      accessPolicy, listModerator.

* Fixed issues:
    - Not serve ACME challenge over HTTP directly.
      Let's Encrypt cert renewal may fail with error `Connection refused` if
      the HTTP request is redirected to HTTPS.
    - [SQL] Not check domain status while querying per-domain BCC.
    - Incorrect SQL column name in Fail2ban script