@@ -1,5 +1,5 @@
 7881ee9ae65f9fef017c5ffbbcf6cfe730d5740e6c0274a18872c7dafa6883b3  misc/iRedAdmin-2.7.tar.gz
 1275b22e095a58d6446aa6c0659d4d2b3260a95891585e54a7b4822434600772  misc/mlmmjadmin-3.6.2.tar.gz
 2045c0ddb6a0be28f72390f1baed6a16c81c80c2ad4376cbdb93e15e6ae0b91b  misc/iRedAPD-6.1.tar.gz
-e50e860080249747351769067942c86c3c482a9d1a53151b473a88379bef3ceb  misc/netdata-v2.8.4.gz.run
+cc9465d56a386d6f5e9cb8235f5115c9f45be7c3c4adb3fa9b20b1f3db9a38ca  misc/netdata-v2.9.0.gz.run
 bdd1bafe79149a6b63f699fa94e7626189ec60e2c37954de7e84ee685dbbf5bb  misc/roundcubemail-1.6.13-complete.tar.gz
