@@ -270,16 +270,6 @@ service quota-warning {
     }
 }
 
-service quota-status {
-    # '-p <protocol>'. Currently only 'postfix' protocol is supported.
-    executable = quota-status -p postfix
-    client_limit = 1
-    inet_listener {
-        address = PH_DOVECOT_SERVICE_QUOTA_STATUS_BIND_ADDRESS
-        port = PH_DOVECOT_SERVICE_QUOTA_STATUS_PORT
-    }
-}
-
 service dict {
     unix_listener dict {
         mode = 0660
