@@ -200,7 +200,6 @@ smtpd_recipient_restrictions =
     permit_mynetworks
     permit_sasl_authenticated
     reject_unauth_destination
-    check_policy_service inet:127.0.0.1:PH_DOVECOT_SERVICE_QUOTA_STATUS_PORT
 
 # END-OF-MESSAGE restrictions
 smtpd_end_of_data_restrictions =
